# photo-search

./: .gitignore  README.md  config.sample.yaml  config.yaml  pyproject.toml  run_indexer.py  run_server.py
api/: app.py  face_api.py  models.py  query_parser.py  search.py
indexer/: encoder.py  exif.py  face.py  geocoder.py  indexer.py  video.py
shared/: compat.py  config.py  store.py
web/: app.js  index.html  style.css
