[project]
name = "photo-search"
version = "0.1.0"
description = "AI-powered photo search with SigLIP2"
requires-python = ">=3.10"
dependencies = [
    "transformers>=5.10.0",
    "accelerate>=0.25.0",
    "sentencepiece",
    "Pillow>=10.0.0",
    "piexif>=1.1.3",
    "lancedb>=0.6.0",
    "pylance>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "pandas>=2.3.3",
    "geopy>=2.4.0",
    "watchdog>=3.0.0",
    "numpy",
    "tqdm>=4.67.3",
    "requests>=2.34.2",
    "sentence-transformers>=5.5.1",
    "insightface>=1.0.1",
    "torch==2.6.0; platform_system == 'Linux'",
    "torch>=2.6,<2.8; platform_system == 'Windows'",
    "onnxruntime-gpu>=1.24.3; platform_system == 'Linux'",
    "onnxruntime>=1.24.3; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "indexer*", "api*"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux'" },
    { index = "pytorch-cpu", marker = "platform_system == 'Windows'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
